# cpd-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: iteration.rs  lib.rs  normalize.rs  probabilities.rs  registration.rs  run.rs  runner.rs  utils.rs
src/gauss_transform/: mod.rs  probabilities.rs  transformer.rs
src/rigid/: mod.rs  registration.rs  transform.rs
tests/data/: face.las  fish.las
