[package]
name = "cpd"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[dependencies]
alga = "0.5"
csv = "1.0.0-beta"
env_logger = "0.4"
failure = "0.1"
failure_derive = "0.1"
generic-array = "0.8"
log = "0.3"
nalgebra = "0.13"
serde = "1.0"

[dev-dependencies]
approx = "0.1"
